--- a/.env-example
+++ b/.env-example
@@ -1,3 +1,3 @@
 PORT
-DATABASE_URL=postgres://postgresUser:postgresUserPass@localhost:5432/databaseName
-SESSION_SECRET=(yourSessionKey)
+DATABASE_URL=postgres://stanislav:123@localhost:5432/exambase
+SESSION_SECRET=64651694651511sdcsd
